<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAluno">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20px"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:background="#CEFFEF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aluno_nome"
                android:textSize="22dp"
                android:layout_marginTop="15px"
                android:textColor="#000000"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:id="@+id/nomeAluno"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aluno_email"
                android:textSize="22dp"
                android:layout_marginTop="15px"
                android:textColor="#000000"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:id="@+id/emailAluno"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aluno_telefone"
                android:textSize="22dp"
                android:layout_marginTop="15px"
                android:textColor="#000000"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/telAluno"
                android:textColor="#000000"
                android:inputType="phone"/>

            <Button
                android:id="@+id/cadastroAluno"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button2"
                android:onClick="cadastrar"
                android:text=""
                android:textColor="#000000" />

            <Button
                android:id="@+id/verBD"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button2"
                android:onClick="verBD"
                android:text="Alunos cadastrados"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>